# VoicePrintMatrix

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yaml  pyproject.toml
src/voice_print_matrix/: ae.py  config.py  discriminator.py  eval.py  eval_ae.py  jvs_batch_dataset.py  jvs_dataset.py  qgru.py  specgram.py  test.py  train.py  train_ae.py  utils.py  vpm_ae.py
