[project]
name = "voice_print_matrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
